Ajout des catégories

--- a/categorie.html
+++ b/categorie.html
@@ -45,6 +45,23 @@
             <hr>
         </div>
 
+        <header class="">
+            <div class="head-content-1">
+                <div class="container">
+                    <ul>
+                        <li><img src="./img/articles/cat-a.png" alt=""> <a href="">Accessoires</a></li>
+                        <li><img src="./img/articles/cat-audio.png" alt=""> <a href="">Audio</a></li>
+                        <li><img src="./img/articles/cat-c.png" alt=""> <a href="">Cameras</a></li>
+                        <li><img src="./img/articles/cat-pc.png" alt=""> <a href="">Laptop</a></li>
+                        <li><img src="./img/articles/cat-h.png" alt=""> <a href="">Casques</a></li>
+                        <li><img src="./img/articles/cat-w.png" alt=""> <a href="">Montres</a></li>
+                        <li><img src="./img/articles/cat-phone.png" alt=""> <a href="">Téléphones</a></li>
+                        <li><img src="./img/articles/cat-sp.png" alt=""> <a href="">Bleuthooth</a></li>
+                        <li><img src="./img/articles/cat-a.png" alt=""> <a href="">eMontre</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         
     </div>
 
